<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/btn_main_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_get" />

    <Button
        android:id="@+id/btn_main_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_post" />

    <Button
        android:id="@+id/btn_main_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_custom" />

    <Button
        android:id="@+id/btn_main_otherjson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_otherjson" />
</LinearLayout>
