<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_otherjson_gson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gson" />
        <Button
            android:id="@+id/btn_otherjson_gson_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gson_error" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_otherjson_fastjson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fastjson" />
        <Button
            android:id="@+id/btn_otherjson_fastjson_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fastjson_error" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_otherjson_otherjson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherjson" />
    </LinearLayout>
</LinearLayout>
