<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_get_getstring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getstring" />

        <Button
            android:id="@+id/btn_get_sync_getstring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_getstring" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_get_getbean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getbean" />

        <Button
            android:id="@+id/btn_get_sync_getbean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_getbean" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_get_getlistbean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getlistbean" />

        <Button
            android:id="@+id/btn_get_sync_getlistbean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_getstring" />
    </LinearLayout>
</LinearLayout>
