<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_custom_customstring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customstring" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_custom_custombean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custombean" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_custom_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom" />

        <Button
            android:id="@+id/btn_custom_sync_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_custom" />
    </LinearLayout>
</LinearLayout>
